objects/FSL_SubType__c.object
<CustomObject>
    <description>Used to store subtype data by distributor code</description>
    <fields>
        <fullName>Bms_Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bms_Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <label>Branch Code</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CodeValueBranchCode__c</fullName>
        <externalId>true</externalId>
        <label>CodeValueBranchCode</label>
        <length>45</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Code_Description__c</fullName>
        <label>Code Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Value__c</fullName>
        <label>Code Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Customer Billable</fullName>
                </value>
                <value>
                    <fullName>Distributor Warranty</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Operations Expense</fullName>
                </value>
                <value>
                    <fullName>Vendor Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distributor_Code__c</fullName>
        <description>Created to apply lookup filter with Location Code for assigned Territory on WO (Source Object)</description>
        <label>Distributor Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <label>Location Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shop_Type__c</fullName>
        <description>This field will define if the subtype is inshop, mobile or both.</description>
        <label>Shop Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sub Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Distributor_Code__c</columns>
        <columns>Branch_Code__c</columns>
        <columns>Code__c</columns>
        <columns>Code_Description__c</columns>
        <columns>Code_Value__c</columns>
        <columns>CodeValueBranchCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CodeValueBranchCode__c</columns>
        <columns>Branch_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Branch_Code__c</field>
            <operation>equals</operation>
            <value>40577038</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <columns>Branch_Code__c</columns>
        <columns>Code_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>contains</operation>
            <value>Int</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Code Value - Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>